--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   release:
     types: [ published ]
 
+permissions: write-all
+
 jobs:
   release:
     strategy:
@@ -33,7 +35,7 @@ jobs:
       - name: Prerelease
         uses: irongut/EditRelease@v1.2.0
         with:
-          token: ${{ secrets.MY_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN  }}
           id: ${{ github.event.release.id }}
           prerelease: true
 
@@ -77,7 +79,7 @@ jobs:
   #     - name: Checkout repo
   #       uses: actions/checkout@v4
   #       with:
-  #         repository: alist-org/desktop-release
+  #         repository: openlistteam/desktop-release
   #         ref: main
   #         persist-credentials: false
   #         fetch-depth: 0
@@ -86,7 +88,7 @@ jobs:
   #       run: |
   #         git config --local user.email "bot@nn.ci"
   #         git config --local user.name "IlaBot"
-  #         version=$(wget -qO- -t1 -T2 "https://api.github.com/repos/alist-org/alist/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
+  #         version=$(wget -qO- -t1 -T2 "https://api.github.com/repos/openlistteam/openlist/releases/latest" | grep "tag_name" | head -n 1 | awk -F ":" '{print $2}' | sed 's/\"//g;s/,//g;s/ //g')
   #         git tag -a $version -m "release $version"
 
   #     - name: Push tags
@@ -94,4 +96,4 @@ jobs:
   #       with:
   #         github_token: ${{ secrets.MY_TOKEN }}
   #         branch: main
-  #         repository: alist-org/desktop-release
+  #         repository: openlistteam/desktop-release
