--- a/.github/workflows/release_freebsd.yml
+++ b/.github/workflows/release_freebsd.yml
@@ -1,10 +1,11 @@
-name: release_freebsd
+name: Release builds (Freebsd)
 
 on:
   release:
     types: [ published ]
 
-permissions: write-all
+permissions:
+  contents: write
 
 jobs:
   release_freebsd:
@@ -62,11 +63,32 @@ jobs:
           prerelease: false
           fail_on_unmatched_files: false
 
-      - name: Upload build logs as artifact (for debugging)
-        uses: actions/upload-artifact@v4
+  release_freebsd_lite:
+    strategy:
+      matrix:
+        platform: [ ubuntu-latest ]
+        go-version: [ '1.21' ]
+    name: Release
+    runs-on: ${{ matrix.platform }}
+    steps:
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
         with:
-          name: freebsd-build-logs
-          path: |
-            freebsd_build_log.txt
-            build/
-          retention-days: 7
+          go-version: ${{ matrix.go-version }}
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Build
+        run: |
+          bash build.sh release lite freebsd
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload assets
+        uses: softprops/action-gh-release@v2
+        with:
+          files: build/compress/*
