--- a/.github/workflows/release_linux_musl_arm.yml
+++ b/.github/workflows/release_linux_musl_arm.yml
@@ -1,10 +1,11 @@
-name: release_linux_musl_arm
+name: Release builds (linux_musl_arm)
 
 on:
   release:
     types: [ published ]
 
-permissions: write-all
+permissions:
+  contents: write
 
 jobs:
   release_linux_musl_arm:
@@ -59,14 +60,33 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: build/compress/*
-          prerelease: false
-          fail_on_unmatched_files: false
 
-      - name: Upload build logs as artifact (for debugging)
-        uses: actions/upload-artifact@v4
+  release_linux_musl_arm_lite:
+    strategy:
+      matrix:
+        platform: [ ubuntu-latest ]
+        go-version: [ '1.21' ]
+    name: Release
+    runs-on: ${{ matrix.platform }}
+    steps:
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
         with:
-          name: linux-musl-arm-build-logs
-          path: |
-            linux_musl_arm_build_log.txt
-            build/
-          retention-days: 7
+          go-version: ${{ matrix.go-version }}
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Build
+        run: |
+          bash build.sh release lite linux_musl_arm
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload assets
+        uses: softprops/action-gh-release@v2
+        with:Add commentMore actions
+        files: build/compress/*
