--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: openlist_${{ env.SHA }}_${{ matrix.target }}
+          name: openlist_${{ steps.short-sha.outputs.sha }}_${{ matrix.target }}
           path: build/*
           retention-days: 7
