--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,11 +49,11 @@ jobs:
                   musl-target-format: $os-$musl-$arch
                   out-dir: build
                   x-flags: |
-                      github.com/dongdio/OpenList/v4/internal/conf.BuiltAt=$built_at
-                      github.com/dongdio/OpenList/v4/internal/conf.GitAuthor=OpenList
-                      github.com/dongdio/OpenList/v4/internal/conf.GitCommit=$git_commit
-                      github.com/dongdio/OpenList/v4/internal/conf.Version=$tag
-                      github.com/dongdio/OpenList/v4/internal/conf.WebVersion=dev
+                    github.com/dongdio/OpenList/v4/internal/conf.BuiltAt=$built_at
+                    github.com/dongdio/OpenList/v4/internal/conf.GitAuthor=The OpenList Projects Contributors <noreply@openlist.team>
+                    github.com/dongdio/OpenList/v4/internal/conf.GitCommit=$git_commit
+                    github.com/dongdio/OpenList/v4/internal/conf.Version=$tag
+                    github.com/dongdio/OpenList/v4/internal/conf.WebVersion=rolling
 
             - name: Verify build output
               run: |
